--- a/trunk/android-app/app/src/main/res/layout/activity_sealife_full.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_sealife_full.xml
@@ -61,7 +61,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@drawable/sealife_photo">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
