--- a/trunk/android-app/app/src/main/res/drawable/border.xml
+++ b/trunk/android-app/app/src/main/res/drawable/border.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/white" />
     <stroke
         android:width="1dip"
-        android:color="@color/primary_dark" />
+        android:color="@color/white" />
 </shape>
