--- a/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_social_login.xml
@@ -26,6 +26,12 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/googleSignIn"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></com.google.android.gms.common.SignInButton>
+
     <ImageView
         android:id="@+id/dds_logo"
         android:layout_centerHorizontal="true"
@@ -43,7 +49,6 @@
     <Button
         android:id="@+id/custom_google"
         android:layout_marginTop="5dp"
-        android:visibility="gone"
         android:layout_below="@+id/fb_custom"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
