--- a/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/dive_center_item.xml
@@ -105,7 +105,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/dc_ic_mail"
+        android:layout_below="@+id/dc_email"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/dc_avatar"
         android:src="@drawable/divider" />
