--- a/trunk/android-app/app/src/main/res/values/styles.xml
+++ b/trunk/android-app/app/src/main/res/values/styles.xml
@@ -6,11 +6,14 @@
         <item name="windowActionBar">false</item>
         <item name="colorAccent">@color/orange</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <item name="android:radioButtonStyle">@style/RadioButton</item>
+       <item name="android:radioButtonStyle">@style/RadioButton</item>
     </style>
 
     <style name="RadioButton" parent="@android:style/Widget.CompoundButton.RadioButton">
         <item name="android:button">@drawable/radio</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:width">300dp</item>
     </style>
 
     <style name="editTextSub" parent="Widget.AppCompat.EditText">
