Sealife layout style

--- a/trunk/android-app/app/src/main/res/layout/activity_sealife_full.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_sealife_full.xml
@@ -59,17 +59,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="460dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="@drawable/sealife_photo">
+       >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/primary"
-            android:background="@color/black_text"
+
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
