--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -5,7 +5,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="295dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -13,7 +13,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:contentScrim="@color/primary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Body2">
             <android.support.v4.view.ViewPager
                 android:id="@+id/product_images"
                 android:layout_width="match_parent"
