--- a/trunk/android-app/app/src/main/res/values-v21/styles.xml
+++ b/trunk/android-app/app/src/main/res/values-v21/styles.xml
@@ -17,6 +17,10 @@
         <item name="android:width">300dp</item>
     </style>
 
+    <style name="CollapseTextSize">
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="drawer_item">
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:background">@null</item>
