--- a/trunk/android-app/app/src/main/res/values/styles.xml
+++ b/trunk/android-app/app/src/main/res/values/styles.xml
@@ -29,6 +29,10 @@
         <item name="android:paddingLeft">40dp</item>
     </style>
 
+    <style name="CollapseTextSize">
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@android:color/white</item>
