--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -14,7 +14,8 @@
             android:layout_height="match_parent"
             app:contentScrim="@color/primary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Body2">
+            app:expandedTitleTextAppearance="@style/CollapseTextSize"
+            >
             <android.support.v4.view.ViewPager
                 android:id="@+id/product_images"
                 android:layout_width="match_parent"
@@ -23,6 +24,7 @@
                 android:scaleType="centerCrop"
                 android:visibility="gone"
                 />
+
             <ImageView
                 android:id="@+id/nonne_photos"
                 app:layout_collapseMode="parallax"
@@ -31,13 +33,27 @@
                 android:layout_height="match_parent"
                 android:visibility="visible"
                 android:src="@drawable/details_photo"/>
-            <ImageView
+           <!-- <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
+                android:layout_height="60dp"
                 android:layout_gravity="bottom"
                 android:background="#50000000"
-                app:layout_collapseMode="parallax"/>
-
+                app:layout_collapseMode="parallax"/> -->
+            <RelativeLayout
+                android:id="@+id/viewPagerIndicator"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="5dp"
+                android:gravity="center">
+                <LinearLayout
+                    android:id="@+id/viewPagerCountDots"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:orientation="horizontal" />
+            </RelativeLayout>
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_collapse"
                 android:layout_width="match_parent"
