--- a/trunk/android-app/app/src/main/res/values-v21/styles.xml
+++ b/trunk/android-app/app/src/main/res/values-v21/styles.xml
@@ -19,6 +19,10 @@
 
     <style name="CollapseTextSize">
         <item name="android:textSize">20sp</item>
+        <item name="android:shadowRadius">3</item>
+        <item name="android:shadowColor">@color/black_text</item>
+        <item name="android:shadowDy">2</item>
+        <item name="android:shadowDx">2</item>
     </style>
 
     <style name="drawer_item">
