--- a/trunk/android-app/app/src/main/res/layout/product_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/product_item.xml
@@ -26,9 +26,10 @@
         android:layout_toLeftOf="@+id/product_logo"
         android:layout_alignParentLeft="true"
         android:textSize="14dp"
+        android:ellipsize="end"
+        android:lines="3"
         android:layout_marginTop="3dp"
         android:layout_marginRight="5dp"
-        android:fontFamily="roboto"
         android:textColor="#616161"
         android:layout_marginLeft="15dp"
         android:layout_below="@+id/product_title"
