--- a/trunk/android-app/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_leave_review.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f6f6f6">
+    <include layout="@layout/view_toolbar" />
     <FrameLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -43,4 +44,4 @@
             android:background="@android:color/transparent"
             />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
