--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:visibility="visible"
-                android:src="@drawable/details_photo"/>
+                android:src="@drawable/divespot_photo_default"/>
            <!-- <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -253,7 +253,47 @@
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:text="High" />
+                    <ImageView
+                        android:id="@+id/last_divider"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/divider" />
+                </LinearLayout>
 
+            </RelativeLayout>
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical" android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:id="@+id/layout_object">
+
+                <ImageView
+                    android:id="@+id/ic_characteristic_object"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_list_object"
+                    android:padding="15dp"/>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/ic_characteristic_object">
+
+                    <TextView
+                        android:layout_marginTop="13dp"
+                        android:layout_height="wrap_content"
+                        android:text="Object"
+                        android:textStyle="bold"
+                        android:textSize="15dp"
+                        android:textColor="@color/black_text"
+                        android:layout_width="wrap_content" />
+                    <TextView
+                        android:id="@+id/characteristic_value_object"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12dp"
+                         />
                 </LinearLayout>
 
             </RelativeLayout>
