--- a/trunk/android-app/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_leave_review.xml
@@ -10,9 +10,10 @@
         android:layout_height="80dp"
         android:background="@color/white">
         <RatingBar
+            android:id="@+id/rating_bar"
             android:layout_marginTop="17dp"
             style="@style/CustomRatingBar"
-            android:rating="3"
+            android:rating="1"
             android:layout_width="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_height="20dp"
@@ -34,6 +35,7 @@
         android:background="@color/white"
         android:layout_marginTop="5dp">
         <EditText
+            android:id="@+id/review_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="Write a review"
