--- a/trunk/android-app/app/src/main/res/layout/activity_reviews.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_reviews.xml
@@ -1,75 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f6">
+    android:background="#f6f6f6"
+    android:orientation="vertical">
+
     <include layout="@layout/view_toolbar" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/header"
-        android:layout_below="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/white">
-        <ImageView
-            android:id="@+id/ds_photo"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:src="@drawable/rewiews_photo"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"/>
-        <TextView
-            android:id="@+id/ds_title"
-            android:layout_toRightOf="@+id/ds_photo"
-            android:layout_marginLeft="14dp"
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Blue hole"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black_text"/>
-        <LinearLayout
-            android:id="@+id/stars"
-            android:layout_below="@+id/ds_title"
-            android:layout_toRightOf="@+id/ds_photo"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_marginLeft="14dp"
-            android:layout_height="14dp"
-            android:orientation="horizontal"
-            />
-        <TextView
-            android:id="@+id/ds_reviews"
-            android:layout_below="@+id/ds_title"
-            android:layout_toRightOf="@+id/stars"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_height="14dp"
-            android:textSize="12sp"
-            android:text="No reviews"/>
-    </RelativeLayout>
-    <ScrollView
-        android:layout_below="@+id/header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/comm_rc"
+
+        <RelativeLayout
+            android:id="@+id/header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"/>
-    </ScrollView>
-    <Button
-        android:id="@+id/leave_review"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#ffd21c"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="15sp"
-        android:text="WRITE A REVIEW"/>
+            android:layout_height="80dp"
+            android:layout_below="@+id/toolbar"
+            android:background="@color/white">
+
+            <ImageView
+                android:id="@+id/ds_photo"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/rewiews_photo" />
+
+            <TextView
+                android:id="@+id/ds_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/ds_photo"
+                android:fontFamily="sans-serif-medium"
+                android:text="Blue hole"
+                android:textColor="@color/black_text"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:id="@+id/stars"
+                android:layout_width="wrap_content"
+                android:layout_height="14dp"
+                android:layout_below="@+id/ds_title"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="6dp"
+                android:layout_toRightOf="@+id/ds_photo"
+                android:orientation="horizontal" />
+
+            <TextView
+                android:id="@+id/ds_reviews"
+                android:layout_width="wrap_content"
+                android:layout_height="14dp"
+                android:layout_below="@+id/ds_title"
+                android:layout_marginTop="6dp"
+                android:layout_toRightOf="@+id/stars"
+                android:text="No reviews"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_below="@+id/header"
+                    android:layout_above="@+id/leave_review"
+                    android:scrollbars="vertical"
+                    android:id="@+id/comm_rc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp" />
+
+
+        <Button
+            android:id="@+id/leave_review"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:background="#ffd21c"
+            android:fontFamily="sans-serif-medium"
+            android:text="WRITE A REVIEW"
+            android:textSize="15sp" />
     </RelativeLayout>
 </LinearLayout>
