--- a/trunk/android-app/app/src/main/res/layout/review_item.xml
+++ b/trunk/android-app/app/src/main/res/layout/review_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/user_avatar"
         android:layout_width="41dp"
         android:layout_height="41dp"
-        android:src="@drawable/review_avatar"
+        android:src="@drawable/review_default_avatar"
         android:layout_marginTop="14dp"
         android:layout_marginLeft="14dp"/>
     <TextView
@@ -16,19 +16,18 @@
         android:layout_toRightOf="@+id/user_avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Jason Statham"
         android:textSize="18sp"
         android:textColor="@color/black_text"
         android:fontFamily="sans-serif-medium"
         android:layout_marginLeft="11dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         />
     <TextView
         android:id="@+id/rated"
         android:layout_toRightOf="@+id/user_avatar"
         android:layout_below="@+id/user_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="15dp"
         android:layout_marginTop="4dp"
         android:text="RATED"
         android:layout_marginLeft="11dp"
@@ -36,28 +35,24 @@
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/black_text"
         />
-    <FrameLayout
-        android:id="@+id/rating_layout"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_toRightOf="@+id/rated"
-        android:layout_below="@+id/user_name"
-        android:layout_marginTop="3dp"
-        android:layout_marginLeft="4dp"
-        android:background="#ed1b24"
-        >
+
         <TextView
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="3dp"
+            android:background="@color/tw__composer_red"
+            android:layout_below="@+id/user_name"
+            android:layout_toRightOf="@+id/rated"
             android:id="@+id/rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_width="15dp"
+            android:layout_height="16dp"
             android:text="1"
             android:textColor="@color/white"/>
-    </FrameLayout>
+
     <TextView
         android:id="@+id/review"
-        android:layout_below="@+id/rating_layout"
-        android:text="Tousled food truck polaroid, salvia bespoke small batch Pinterest Marfa. Fingerstache authentic craft beer, food truck Banksy Carles kale chips hoodie. Trust fund artisan master c…"
+        android:layout_below="@+id/rating"
+        android:layout_marginTop="3dp"
         android:textSize="14sp"
         android:padding="14dp"
         android:textColor="#616161"
