--- a/trunk/android-app/app/src/main/res/values/styles.xml
+++ b/trunk/android-app/app/src/main/res/values/styles.xml
@@ -66,4 +66,11 @@
         <item name="android:textColor">@color/gray</item>
     </style>
 
+    <style name="radio_button">
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
 </resources>
