--- a/trunk/android-app/app/src/main/res/layout/activity_details.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_details.xml
@@ -1,8 +1,8 @@
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="295dp"
@@ -100,8 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:textSize="14sp"
-                android:layout_marginLeft="12dp"
-                android:text="No reviews"/>
+                android:layout_marginLeft="12dp" />
             <ImageView
                 android:layout_toRightOf="@+id/reviews_number"
                 android:layout_width="wrap_content"
@@ -140,8 +139,7 @@
                         android:id="@+id/characteristic_value_depth"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="12dp"
-                        android:text="10 meters" />
+                        android:textSize="12dp" />
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -177,8 +175,7 @@
                         android:id="@+id/characteristic_value_visibility"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="12dp"
-                        android:text="10 meters" />
+                        android:textSize="12dp" />
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -214,8 +211,7 @@
                         android:id="@+id/characteristic_value_currents"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="12dp"
-                        android:text="Strong" />
+                        android:textSize="12dp" />
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -252,7 +248,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
-                        android:text="High" />
+                         />
                     <ImageView
                         android:id="@+id/last_divider"
                         android:layout_width="wrap_content"
