--- a/trunk/android-app/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/android-app/app/src/main/res/layout/activity_splash.xml
@@ -8,5 +8,14 @@
         android:id="@+id/mask_splash"
         android:layout_height="match_parent"
         android:background="@drawable/bg_photo"/>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Scanning..."
+        android:textColor="@color/white"
+        android:textSize="21sp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_marginTop="100dp"/>
 </FrameLayout>
