--- a/trunk/ddscanner/app/src/main/res/drawable/border.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/border.xml
@@ -1,7 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="1dip"
-        android:color="@color/white" />
+    <solid android:color="#75ffffff" />
+    <corners
+        android:radius="10dp"/>
 </shape>
