--- a/trunk/ddscanner/app/src/main/res/layout/activity_city.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_city.xml
@@ -27,6 +27,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/toast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:gravity="center">
+    <TextView
+        android:layout_marginTop="120dp"
+        android:layout_width="250dp"
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:background="@drawable/border"
+        android:text="Please zoom in to see dive spots"/>
+    </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/filterButton"
         android:layout_width="60dp"
