--- a/trunk/ddscanner/app/src/main/res/layout/city_toolbar.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/city_toolbar.xml
@@ -21,6 +21,8 @@
             android:background="?attr/selectableItemBackground"
             android:layout_width="wrap_content"
             android:gravity="center_vertical"
+            android:lines="1"
+            android:ellipsize="end"
             android:textColor="@color/white"
             android:layout_height="match_parent" />
         </android.support.v7.widget.Toolbar>
