--- a/trunk/ddscanner/app/src/main/res/drawable/nonselecteditem_dot.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/nonselecteditem_dot.xml
@@ -5,5 +5,5 @@
 
     <size android:height="6dip" android:width="6dip"/>
     
-    <solid android:color="@color/gray"/>
+    <solid android:color="#50a3a3a3"/>
 </shape>
