--- a/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_splash.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_photo">
 
     <com.ddscanner.ui.views.DDProgressBarView
         android:layout_width="match_parent"
         android:id="@+id/mask_splash"
-        android:layout_height="match_parent"
-        android:background="@drawable/bg_photo"/>
+        android:layout_height="match_parent" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
