Sealife image size, notification title

--- a/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
@@ -78,11 +78,10 @@
                 android:layout_height="match_parent" />
             <ImageView
                 android:id="@+id/sealife_full_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/sealife_photo"
                 app:layout_collapseMode="parallax"
-                android:scaleType="centerCrop"
                 android:layout_gravity="center"/>
 
             <android.support.v7.widget.Toolbar
@@ -106,7 +105,7 @@
             <RelativeLayout
                 android:id="@+id/char_length"
                 android:layout_marginTop="20dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <android.support.v7.widget.AppCompatTextView
