--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -30,6 +30,7 @@
     </FrameLayout>
     <LinearLayout
         android:layout_below="@+id/header"
+        android:id="@+id/message_layout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/white"
