--- a/trunk/ddscanner/app/src/main/res/layout/activity_city.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_city.xml
@@ -27,6 +27,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
+    <ProgressBar
+        android:layout_marginTop="105dp"
+        android:id="@+id/request_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:indeterminateOnly="true"
+        android:background="@android:color/transparent"
+        android:progressTint="@color/primary"
+        android:indeterminateTint="@color/primary"
+        android:indeterminateTintMode="src_in"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="18dp" />
     <RelativeLayout
         android:id="@+id/toast"
         android:layout_width="match_parent"
@@ -34,7 +46,7 @@
         android:visibility="gone"
         android:gravity="center">
     <TextView
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="123dp"
         android:layout_width="250dp"
         android:layout_height="30dp"
         android:gravity="center"
@@ -42,7 +54,6 @@
         android:background="@drawable/border"
         android:text="Please zoom in to see dive spots"/>
     </RelativeLayout>
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/filterButton"
         android:layout_width="60dp"
