--- a/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/slider_image_fragment.xml
@@ -4,10 +4,26 @@
     android:id="@+id/framelayout_slider"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
--->
+--> <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
     <ImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/slider_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center"
+        android:visibility="visible"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
+</FrameLayout>
