--- a/trunk/ddscanner/app/src/main/res/layout/activity_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_profile.xml
@@ -1,28 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_photo">
-    <include layout="@layout/view_toolbar" />
+    android:background="#f6f6f6">
     <RelativeLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="15dp"
+        android:layout_height="wrap_content"
+        android:background="@color/primary"
         >
-        <ImageView
-            android:id="@+id/profile_picture"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:src="@drawable/sealife_photo"/>
-        <TextView
-            android:id="@+id/profile_name"
-            android:layout_toRightOf="@+id/profile_picture"
-            android:layout_marginLeft="10dp"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:gravity="center_vertical"
-            android:text="Andrey Lashkevich"
-            android:textColor="@color/white"
-            android:textSize="18sp"/>
+            android:layout_height="?actionBarSize"
+            android:background="@android:color/transparent"
+            android:minHeight="?actionBarSize"
+            android:transitionName="toolbar"
+            auto:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            auto:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_below="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            />
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_below="@+id/avatar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginTop="17dp"
+            android:textColor="@color/orange"
+            android:textSize="21sp"
+            android:gravity="center"/>
+        <TextView
+            android:id="@+id/link"
+            android:layout_below="@+id/user_name"
+            android:gravity="center"
+            android:textColor="#b2ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:paddingBottom="40dp"/>
     </RelativeLayout>
-</LinearLayout>
+    <Button
+        android:id="@+id/button_logout"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_below="@+id/header"
+        android:layout_marginTop="22dp"
+        android:text="Logout"
+        android:visibility="gone"
+        android:background="@android:color/transparent"
+        android:textColor="#ff2626"
+        android:textSize="16sp"
+        style="?android:attr/borderlessButtonStyle"/>
+</RelativeLayout>
