--- a/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_sealife_full.xml
@@ -63,6 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="460dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/black_text"
        >
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -83,6 +84,17 @@
                 android:src="@drawable/sealife_photo"
                 app:layout_collapseMode="parallax"
                 android:layout_gravity="center"/>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:visibility="visible"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_collapse"
