--- a/trunk/ddscanner/app/src/main/res/layout/info_window.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/info_window.xml
@@ -3,13 +3,12 @@
     android:layout_width="@dimen/info_window_width"
     android:layout_height="@dimen/info_window_height"
     android:orientation="vertical"
-    android:background="@android:color/white">
+    android:background="@drawable/info_window_round">
 
     <ImageView
         android:id="@+id/popup_photo"
         android:layout_width="260dp"
         android:layout_height="116dp"
-        android:background="@color/white"
         android:alpha="0.4"
         android:src="@drawable/map_info_photo_default" />
 
@@ -30,8 +29,7 @@
         android:id="@+id/descr"
         android:layout_width="260dp"
         android:layout_height="71dp"
-        android:layout_below="@+id/popup_photo"
-        android:background="@color/white">
+        android:layout_below="@+id/popup_photo">
 
         <TextView
             android:id="@+id/description_popup"
@@ -53,7 +51,6 @@
         android:layout_width="260dp"
         android:layout_height="30dp"
         android:layout_below="@+id/descr"
-        android:background="@color/white"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal"></LinearLayout>
 </RelativeLayout>
