--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -21,13 +21,18 @@
         android:layout_marginLeft="11dp"
         android:layout_marginTop="10dp"
         />
-    <TextView
-        android:id="@+id/rated"
+    <RelativeLayout
+        android:id="@+id/rating_layout"
         android:layout_toRightOf="@+id/user_avatar"
         android:layout_below="@+id/user_name"
+
+        android:layout_width="wrap_content"
+        android:layout_height="18dp">
+    <TextView
+        android:id="@+id/rated"
+        android:layout_marginTop="1dp"
         android:layout_width="wrap_content"
         android:layout_height="17dp"
-        android:layout_marginTop="4dp"
         android:text="RATED"
         android:layout_marginLeft="11dp"
         android:textSize="12sp"
@@ -37,20 +42,18 @@
 
         <TextView
             android:layout_marginLeft="4dp"
-            android:layout_marginTop="3dp"
             android:background="@drawable/rating_rectangle"
-            android:layout_below="@+id/user_name"
             android:layout_toRightOf="@+id/rated"
             android:id="@+id/rating"
-            android:gravity="center"
+            android:gravity="center_vertical|center_horizontal"
             android:layout_width="15dp"
             android:layout_height="16dp"
             android:text="1"
             android:textColor="@color/white"/>
-
+    </RelativeLayout>
     <TextView
         android:id="@+id/review"
-        android:layout_below="@+id/rating"
+        android:layout_below="@+id/rating_layout"
         android:layout_marginTop="3dp"
         android:textSize="14sp"
         android:padding="14dp"
