--- a/trunk/ddscanner/app/src/main/res/layout/product_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_item.xml
@@ -6,7 +6,10 @@
     android:layout_marginTop="5dp"
     android:clickable="true"
     android:focusable="true">
-
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground">
     <TextView
         android:id="@+id/product_title"
         android:layout_width="wrap_content"
@@ -61,4 +64,5 @@
         android:visibility="visible"
         android:layout_centerVertical="true"
         android:layout_marginRight="40dp" />
+    </RelativeLayout>
     </RelativeLayout>
