--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -32,10 +32,12 @@
         android:layout_below="@+id/header"
         android:id="@+id/message_layout"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp">
         <EditText
+            android:cursorVisible="true"
             android:id="@+id/review_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,8 +45,10 @@
             android:layout_marginTop="13dp"
             android:layout_marginLeft="20dp"
             android:textSize="19sp"
+            android:layout_weight="1"
             android:textColorHint="#9f9f9f"
             android:background="@android:color/transparent"
+            android:scrollbars="vertical"
             />
     </LinearLayout>
 </LinearLayout>
