--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -36,7 +36,23 @@
         android:background="@color/white"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/left_text"
+                android:id="@+id/left_number"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#9f9f9f"
+                android:text="250"/>
         <EditText
+            android:inputType="text|textFilter|textMultiLine"
+            android:layout_below="@id/left_number"
+            android:layout_gravity="center"
             android:cursorVisible="true"
             android:id="@+id/review_text"
             android:layout_width="wrap_content"
@@ -44,11 +60,26 @@
             android:hint="Write a review"
             android:layout_marginTop="13dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:textSize="19sp"
             android:layout_weight="1"
+            android:maxLength="250"
             android:textColorHint="#9f9f9f"
             android:background="@android:color/transparent"
             android:scrollbars="vertical"
+            android:autoText="true"
             />
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/left_text"
+            android:layout_alignParentRight="true"
+            android:gravity="right"
+            android:textColor="#9f9f9f"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="symbols left"/>
+        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
