--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:layout_marginTop="6dp"
@@ -55,16 +57,7 @@
                 android:text="1"
                 android:textColor="@color/white"/>
         </RelativeLayout>
-     <!--   <TextView
-            android:layout_marginLeft="4dp"
-            android:background="@drawable/rating_rectangle"
-            android:layout_toRightOf="@+id/rated"
-            android:id="@+id/rating"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_width="15dp"
-            android:layout_height="16dp"
-            android:text="1"
-            android:textColor="@color/white"/> -->
+
     </RelativeLayout>
     <TextView
         android:id="@+id/review"
@@ -72,26 +65,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:ellipsize="end"
         android:textSize="14sp"
-        android:minLines="1"
-        android:maxLines="10000"
         android:paddingLeft="14dp"
         android:paddingTop="14dp"
         android:paddingRight="14dp"
         android:textColor="#616161">
         </TextView>
-    <TextView
-        android:id="@+id/show_more"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_below="@+id/review"
-        android:gravity="center_vertical"
-        android:text="Show more"
-        android:visibility="gone"
-        android:textSize="14sp"
-        android:layout_marginLeft="14dp"
-        android:textColor="#303f9f"
-        android:fontFamily="sans-serif-medium"
-        />
 </RelativeLayout>
