--- a/trunk/ddscanner/app/src/main/res/layout/activity_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f6">
+    android:background="@color/gray_bg">
     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
