--- a/trunk/ddscanner/app/src/main/res/layout/ds_info_window.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/ds_info_window.xml
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:text="Blue Hole"
+        android:lines="1"
+        android:ellipsize="end"
         android:fontFamily="sans-serif-medium"
         android:textColor="@color/black_text"
         />
