--- a/trunk/ddscanner/app/src/main/res/layout/info_window_divecenter.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/info_window_divecenter.xml
@@ -16,6 +16,8 @@
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/iw_dc_name"
             android:layout_width="wrap_content"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_height="wrap_content"
             android:text="No Gravity Dive Center"
             android:fontFamily="sans-serif-medium"
